--- a/index.html
+++ b/index.html
@@ -1,118 +1,129 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <title>Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <!-- Do not add `link` tags-->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body>
-        <h1>An Website</h1>
-        <div class="header">
-          <button id="sign-up" type="button" class="btn btn-primary" data-toggle="modal" data-target="#signUpModal">
-            Sign Up
-          </button>
-          <button id="sign-in" type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">
-            Sign In
-          </button>
-          <button id="change-password" type="button" class="btn btn-primary hidden" data-toggle="modal" data-target="#changePasswordModal">
-            Change Password
-          </button>
-          <button id="sign-out" class="btn btn-danger hidden">Sign Out</button>
-        </div>
-        <hr>
-        <div id="alert"></div>
+    <!-- Do not add `script` tags-->
+    <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+    <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <h1>An Website</h1>
+      <div class="header">
+        <button id="sign-up" type="button" class="btn btn-primary" data-toggle="modal" data-target="#signUpModal">
+          Sign Up
+        </button>
 
-        <!--Sign Up Modal-->
-        <div class="modal fade" tabindex="-1" role="dialog" id="signUpModal">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
+        <button id="sign-in" type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">
+          Sign In
+        </button>
 
-                <h2 class="modal-title">Sign Up</h2>
-              </div>
-              <div class="modal-body">
-                <div id="errorSU"></div>
-                <form class="form" id="sign-up-form">
-                  Email: <input type="text" name="credentials[email]" placeholder="Email" class="form-control">
-                  Password: <input type="password" name="credentials[password]" placeholder="Pick a password, any password." class="form-control">
-                  Confirm Password: <input name="credentials[password_confirmation]" type="password" placeholder="Make sure it matches!" class="form-control">
-                  <button type="submit" class="btn btn-primary btn-modal float-right">Sign In</button>
-                  <button type="button" class="btn btn-info btn-modal float-right" data-dismiss="modal">Cancel</button>
-                </form>
-                <br><br><br>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <button id="change-password" type="button" class="btn btn-primary hidden" data-toggle="modal" data-target="#changePasswordModal">
+          Change Password
+        </button>
 
-        <!--Sign In Modal-->
-        <div class="modal fade" tabindex="-1" role="dialog" id="signInModal">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-                <h2 class="modal-title">Sign In</h2>
-              </div>
-              <div class="modal-body">
-                <div id="errorSI"></div>
-                <form class="form" id="sign-in-form">
-                  Email:
-                  <input type="text" name="credentials[email]" placeholder="Email" class="form-control">
-                  Password:
-                  <input type="password" name="credentials[password]" placeholder="Pick a password, any password. As long as its your password" class="form-control">
-                  <button type="submit" class="btn btn-primary btn-modal float-right">Sign In</button>
-                  <button type="button" class="btn btn-info btn-modal float-right" data-dismiss="modal">Cancel</button>
-                </form>
-                <br><br><br>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!--Change Pword Modal-->
-        <div class="modal fade" tabindex="-1" role="dialog" id="changePasswordModal">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-                <h2 class="modal-title">Change Password</h2>
-              </div>
-              <div class="modal-body">
-                <div id="errorCP"></div>
-                <form class="form-inline" id="change-password-form">
-                  Old Password: <input type="password" name="passwords[old]" placeholder="Old Password" class="form-control">
-                  New Password: <input type="password" name="passwords[new]" placeholder="New Password" class="form-control">
-                  <button type="submit" class="btn btn-primary btn-modal float-right">Change Password</button>
-                  <button type="button" class="btn btn-info btn-modal float-right" data-dismiss="modal">Cancel</button>
-                </form>
-                <br><br><br>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <form id="add-recipe" class="form hidden">
-          Title <input type="text" name="recipe[title]" placeholder="recipe title" class="form-control">
-          Instructions <input type="text" name="recipe[instructions]" placeholder="instructions" class="form-control">
-          <button type="submit" class="btn btn-success">Create</button>
-        </form>
-        <button id="recipe-show" class="btn btn-default hidden">Show Recipes</button>
-
-        <div class="showRecipes" id="show-recipes"></div>
+        <button id="sign-out" class="btn btn-danger hidden">Sign Out</button>
       </div>
+      <hr>
+      <div id="alert"></div>
+      <div class="welcome-card section" id="welcome-message">
+        <img src="./assets/img/recipe-book.png" alt="Recipe Book Graphic" height="200px">
+        <h4>Welcome to the world's greatest online recipe book. Here You'll find a wide array of recipes, from the regular to the ridiculous. Create an account or log in and launch your kitchen into the 21st century! Feel free to add as many recipes as you want. Forget grandma's box of cards; join the cutting edge of future home tech!</h4>
+      </div>
+
+      <!--Sign Up Modal-->
+      <div class="modal fade" tabindex="-1" role="dialog" id="signUpModal">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h2 class="modal-title">Sign Up</h2>
+            </div>
+            <div class="modal-body">
+              <div id="errorSU"></div>
+              <form class="form" id="sign-up-form">
+                Email: <input type="text" name="credentials[email]" placeholder="Email" class="form-control">
+                Password: <input type="password" name="credentials[password]" placeholder="Pick a password, any password." class="form-control">
+                Confirm Password: <input name="credentials[password_confirmation]" type="password" placeholder="Make sure it matches!" class="form-control">
+                <button type="submit" class="btn btn-primary btn-modal float-right">Sign In</button>
+                <button type="button" class="btn btn-info btn-modal float-right" data-dismiss="modal">Cancel</button>
+              </form>
+              <br><br><br>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--Sign In Modal-->
+      <div class="modal fade" tabindex="-1" role="dialog" id="signInModal">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h2 class="modal-title">Sign In</h2>
+            </div>
+            <div class="modal-body">
+              <div id="errorSI"></div>
+              <form class="form" id="sign-in-form">
+                Email:
+                <input type="text" name="credentials[email]" placeholder="Email" class="form-control">
+                Password:
+                <input type="password" name="credentials[password]" placeholder="Pick a password, any password. As long as its your password" class="form-control">
+                <button type="submit" class="btn btn-primary btn-modal float-right">Sign In</button>
+                <button type="button" class="btn btn-info btn-modal float-right" data-dismiss="modal">Cancel</button>
+              </form>
+              <br><br><br>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--Change Pword Modal-->
+      <div class="modal fade" tabindex="-1" role="dialog" id="changePasswordModal">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h2 class="modal-title">Change Password</h2>
+            </div>
+            <div class="modal-body">
+              <div id="errorCP"></div>
+              <form class="form-inline" id="change-password-form">
+                Old Password: <input type="password" name="passwords[old]" placeholder="Old Password" class="form-control">
+                New Password: <input type="password" name="passwords[new]" placeholder="New Password" class="form-control">
+                <button type="submit" class="btn btn-primary btn-modal float-right">Change Password</button>
+                <button type="button" class="btn btn-info btn-modal float-right" data-dismiss="modal">Cancel</button>
+              </form>
+              <br><br><br>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <form id="add-recipe" class="form section collapsed">
+        <h2>Create a Recipe</h2>
+        <h4>Title</h4>
+        <input type="text" name="recipe[title]" placeholder="Recipe Title" class="form-control">
+        <h4>Instructions</h4>
+        <textarea name="recipe[instructions]" form="add-recipe" class="form-control" id="inst-input" placeholder="Recipe Instructions"></textarea>
+        <button type="submit" class="btn btn-success">Create</button>
+      </form>
+
+      <button id="recipe-show" class="btn btn-default hidden">Show Recipes</button>
+      <hr>
+      <div id="your-recipes-title" class="hidden"><h1>Your Recipes</h1></div>
+      <div id="show-recipes" class="showRecipes cards-background"></div>
+      <hr>
+      <div class="footer">Copyright &copy; 2018 Swardstrom Media. All rights reserved.</div>
+    </div>
   </body>
 </html>
