moved img to public/img

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <hr>
       <div id="alert"></div>
       <div class="welcome-card section" id="welcome-message">
-        <img src="./assets/img/recipe-book.png" alt="Recipe Book Graphic" height="200px">
+        <img src="./public/img/recipe-book.png" alt="Recipe Book Graphic" height="200px">
         <h4>Welcome to the world's greatest online recipe book. Here You'll find a wide array of recipes, from the regular to the ridiculous. Create an account or log in and launch your kitchen into the 21st century! Feel free to add as many recipes as you want. Forget grandma's box of cards; join the cutting edge of future home tech!</h4>
       </div>
 
