can't get the header into the middle of page, but now has sticky nav. Refactored css to multiple files

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <body>
     <div class="container-fluid">
       <div id="head" class="header hidden">
+        <div id="alert"></div>
         <img class="float-left" src="./public/img/recipe-book-icon.png" alt="Recipe Book Graphic" height="50px">
         <div class="clearfix"><h3>A Recipe Book for the Ages</h3></div>
         <button id="sign-out" class="btn btn-danger hidden float-right">Sign Out</button>
         <button id="change-password" type="button" class="btn btn-primary hidden float-right" data-toggle="modal" data-target="#changePasswordModal">Change Password</button>
       </div>
-      <div id="alert"></div>
-      <br><br>
+      <div id="nav-break" class="hidden"><br><br><br><br><br><br><br><br></div>
       <div id="welcome-message" class="welcome-card section">
         <div class="welcome-body">
           <img src="./public/img/recipe-book.png" alt="Recipe Book Graphic" height="120px">
